--- a/01-welcomepage.html
+++ b/01-welcomepage.html
@@ -22,9 +22,9 @@
           </div>
         </div>
         <div class="buttons">
-          <a href="index.html">My Works</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="02-index.html">My Works</a>
+          <a href="02-about.html">About</a>
+          <a href="02-contact.html">Contact</a>
         </div>
   </body>
 
