Update and rename contact.html to 02-contact.html

--- a/02-contact.html
+++ b/02-contact.html
@@ -23,9 +23,8 @@
 				</form>
 			</div>	
 		<div class="buttons">
-          <a href="index.html">My Works</a>
-          <a href="about.html">About</a>
-          <a href="contact.html">Contact</a>
+          <a href="02-index.html">My Works</a>
+          <a href="02-about.html">About</a>
         </div>
 	</body>
 </html>
