--- a/02-index.html
+++ b/02-index.html
@@ -13,22 +13,22 @@
     <div class="grid2x2">
       <div class="box box1">
         <div>
-          <a href="works.html"><img src="img/ind-ilu.png" style="border:0;"></a>
+          <a href="03-works.html"><img src="img/ind-ilu.png" style="border:0;"></a>
         </div>
       </div>
       <div class="box box2">
         <div>
-          <a href="works.html"><img src="img/ind-anim.png" style="border:0;"></a>
+          <a href="03-works.html"><img src="img/ind-anim.png" style="border:0;"></a>
         </div>
       </div>
       <div class="box box3">
         <div>
-          <a href="works.html"><img src="img/ind-desgn.png" style="border:0;"></a>
+          <a href="03-works.html"><img src="img/ind-desgn.png" style="border:0;"></a>
         </div>
       </div>
       <div class="box box4">
         <div>
-          <a href="works.html"><img src="img/ind-font.png" style="border:0;"></a>
+          <a href="03-works.html"><img src="img/ind-font.png" style="border:0;"></a>
         </div>
       </div>
     </div>
