Update and rename works.html to 03-works.html

--- a/03-works.html
+++ b/03-works.html
@@ -18,40 +18,40 @@
 
     <div class="grid">
       <div class="grid-item">
-        <a href="work.html"><img src="img/works1.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works1.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works2.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works2.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works3.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works3.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works4.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works4.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works5.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works5.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works6.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works6.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works7.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works7.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
         <a href="work.html"><img src="img/works8.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works9.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works9.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works10.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works10.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works11.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works11.png" style="border:0;"></a>
       </div>
       <div class="grid-item">
-        <a href="work.html"><img src="img/works12.png" style="border:0;"></a>
+        <a href="04-work.html"><img src="img/works12.png" style="border:0;"></a>
       </div>
     </div>
   </body>
