--- a/02-about.html
+++ b/02-about.html
@@ -31,8 +31,8 @@
 
 
       <div class="buttons">
-        <a href="index.html">02-Works</a>
-        <a href="contact.html">02-Contact</a>
+        <a href="02-index.html">Works</a>
+        <a href="02-contact.html">Contact</a>
 
 
 
