--- a/03-works.html
+++ b/03-works.html
@@ -11,9 +11,9 @@
 
   <body>
     <div class="buttons">
-      <a href="index.html">My Works</a>
-      <a href="about.html">About</a>
-      <a href="contact.html">Contact</a>
+      <a href="02-index.html">My Works</a>
+      <a href="02-about.html">About</a>
+      <a href="02-contact.html">Contact</a>
     </div>
 
     <div class="grid">
